--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,11 @@ lml==0.0.6
 multidict==4.4.2
 pyexcel==0.5.9.1
 pyexcel-io==0.5.9.1
+pytoml==0.1.20
 pytz==2018.7
 requests==2.20.1
 texttable==1.5.0
+toml==0.10.0
 tzlocal==1.5.1
 urllib3==1.24.1
 yarl==1.2.6
