--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,15 @@
 certifi==2018.10.15
 chardet==3.0.4
+et-xmlfile==1.0.1
 idna==2.7
+jdcal==1.4
 lml==0.0.6
 multidict==4.4.2
+openpyxl==2.5.11
 pyexcel==0.5.9.1
 pyexcel-io==0.5.9.1
+pyexcel-xls==0.5.8
+pyexcel-xlsx==0.5.6
 pytoml==0.1.20
 pytz==2018.7
 requests==2.20.1
@@ -12,4 +17,6 @@ texttable==1.5.0
 toml==0.10.0
 tzlocal==1.5.1
 urllib3==1.24.1
+xlrd==1.1.0
+xlwt==1.3.0
 yarl==1.2.6
